corrected the alignment of div

--- a/assets/css/darkmode.css
+++ b/assets/css/darkmode.css
@@ -135,3 +135,11 @@ nav a.whitecr:hover {
 .pure_dark:hover{
   background: black;
 }
+
+#services .services-item{
+  /* height:270px;
+  width:275px; */
+  height:280px;
+  width:305px;
+}
+
