--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -54,12 +54,6 @@ left: 30px; */
 
 /* only small tablets */
 @media (min-width: 768px) and (max-width: 991px) {
-  .container{
-    margin: 0 10px;
-  }
-  .navbar-brand img{
-    display: none;
-  }
   .section-title {
     font-size: 26px;
     margin-bottom: 30px;
@@ -74,7 +68,6 @@ left: 30px; */
   .navbar-expand-md .navbar-nav .nav-link {
     margin-bottom: 0;
     margin-top: 0;
-    font-size: 80%;
   }
   #about .sec-title h3 {
     font-size: 30px;
@@ -147,7 +140,6 @@ left: 30px; */
   .navbar-expand-md .navbar-nav .nav-link {
     margin-bottom: 0;
     margin-top: 0;
-    padding: 5px 50%;
   }
   .navbar-brand img {
     margin: 5px 0;
@@ -239,6 +231,27 @@ left: 30px; */
   #buttontop{
     bottom: 20px;
     right: 20px;
+  }
+}
+
+@media (max-width: 451px){
+  .img_container{
+    margin: 0px auto !important;
+  }
+  .box1,.box4{
+    margin-top: 20px !important;
+    margin-bottom: 30px !important;
+  }
+  .box3{
+    margin: 40px auto !important;
+  }
+  .box2,.box5{
+    margin-top: 30px !important;
+    margin-bottom: 20px !important;
+  }
+  .box6{
+    margin-top: 30px !important;
+    margin-bottom: 30px !important;
   }
 }
 
