--- a/assets/css/contactSection.css
+++ b/assets/css/contactSection.css
@@ -10,7 +10,7 @@
   box-shadow: 0 0 10px #f7b801 !important;
 }
 .contactSection {
-  background-image: url("/assets/img/one-yellow.png");
+  background-image: url("../img/one-yellow.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -86,7 +86,7 @@
   }
 
   #contactSection {
-    background-image: url("./images/one.png");
+    background-image: url("../img/one.png");
     height: 100vh !important;
     width: 100vw !important;
   }
