--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -953,6 +953,10 @@ hr {
 }
 
 .testimonial {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   position: relative;
   background-color: var(--primary);
 }
